--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "less-loader": "8",
     "mini-css-extract-plugin": "^2.4.5",
     "mobx": "^6.10.2",
+    "mobx-react-lite": "^4.0.5",
     "postcss": "^8.4.4",
     "postcss-flexbugs-fixes": "^5.0.2",
     "postcss-loader": "^6.2.1",
