--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@ant-design/icons": "^5.2.6",
     "@types/d3": "^7.4.3",
+    "@types/node": "^20.9.4",
     "@types/uuid": "^9.0.7",
     "antd": "^5.11.1",
     "d3": "^7.8.5",
