--- a/package.json
+++ b/package.json
@@ -13,14 +13,18 @@
     "@ant-design/icons": "^5.2.6",
     "@types/d3": "^7.4.3",
     "@types/node": "^20.9.4",
+    "@types/pako": "^2.0.3",
     "@types/uuid": "^9.0.7",
     "antd": "^5.11.1",
+    "axios": "^1.6.2",
     "d3": "^7.8.5",
     "mobx": "^6.11.0",
     "mobx-react-lite": "^4.0.5",
+    "pako": "^2.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "uuid": "^9.0.1"
+    "uuid": "^9.0.1",
+    "vite-plugin-compression": "^0.5.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
