--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/d3": "^7.4.3",
     "@types/node": "^20.9.4",
     "@types/pako": "^2.0.3",
+    "@types/react-router-dom": "^5.3.3",
     "@types/uuid": "^9.0.7",
     "antd": "^5.11.1",
     "axios": "^1.6.2",
@@ -23,6 +24,7 @@
     "pako": "^2.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.21.1",
     "uuid": "^9.0.1",
     "vite-plugin-compression": "^0.5.1"
   },
